--- a/templates/about.html
+++ b/templates/about.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Про магазин | Контакти</title>
-    <link rel="stylesheet" href="css/style.css"> <!-- Підключення CSS -->
+    <link rel="stylesheet" href="../css/style.css"> <!-- Підключення CSS -->
 </head>
 <body>
     <header>
