--- a/css/style.css
+++ b/css/style.css
@@ -252,14 +252,6 @@ textarea {
 *
  */
 
-.parallax {
-    background-image: url('path-to-image.jpg');
-    background-attachment: fixed;
-    background-size: cover;
-    height: 500px;
-}
-
-
 body {
     font-family: Arial, sans-serif;
     margin: 0;
@@ -410,15 +402,13 @@ main {
 }
 
 
-/*
-Куплений
- */
+/* стилі для купленох кнопки */
 .purchased {
-    background-color: #28a745; /* Зелений колір */
+    background-color: #28a745;
     color: white;
 }
 .catalog-product.purchased {
-    border: 2px solid #28a745; /* Зелене підсвічування */
+    border: 2px solid #28a745;
 }
 .catalog-product.purchased p {
     font-size: 0.95em;
@@ -473,45 +463,3 @@ main {
         max-width: 150px;
     }
 }
-
-
-/* Стиль модального вікна */
-.modal {
-    display: none;
-    position: fixed;
-    z-index: 1000;
-    left: 0;
-    top: 0;
-    width: 100%;
-    height: 100%;
-    background-color: rgba(0, 0, 0, 0.5);
-    justify-content: center;
-    align-items: center;
-}
-
-.modal-content {
-    background-color: #fff;
-    padding: 20px;
-    border-radius: 8px;
-    width: 300px;
-    text-align: center;
-    position: relative;
-}
-
-.modal-content .close {
-    position: absolute;
-    top: 10px;
-    right: 10px;
-    font-size: 1.5em;
-    cursor: pointer;
-}
-
-.modal-content input,
-.modal-content textarea {
-    width: 75%;
-    padding: 10px;
-    margin: 10px 0;
-    border: 1px solid #ccc;
-    border-radius: 4px;
-}
-
