--- a/css/style.css
+++ b/css/style.css
@@ -15,6 +15,9 @@ html {
   color: #222;
   font-size: 1em;
   line-height: 1.4;
+  padding: 0;
+  margin: 0;
+  height: 100%;
 }
 
 /*
@@ -252,22 +255,6 @@ textarea {
 *
  */
 
-.parallax {
-    background-image: url('path-to-image.jpg');
-    background-attachment: fixed;
-    background-size: cover;
-    height: 500px;
-}
-
-
-body {
-    font-family: Arial, sans-serif;
-    margin: 0;
-    padding: 0;
-    background-color: #f7f8fc;
-    color: #333;
-}
-
 /* Header styling with gradient background and shadow */
 header {
     background: linear-gradient(135deg, #2c3e50, #34495e);
@@ -275,17 +262,6 @@ header {
     padding: 20px 0;
     text-align: center;
     box-shadow: 0 4px 12px rgba(0, 0, 0, 0.15);
-}
-
-.nav-link {
-    margin: 0 15px;
-    color: #e0e6ed;
-    text-decoration: none;
-    transition: color 0.3s ease;
-}
-
-.nav-link:hover {
-    color: #bdc3c7;
 }
 
 footer {
@@ -298,220 +274,53 @@ footer {
     color: #f7f8fc;
 }
 
+body {
+    font-family: Arial, sans-serif;
+    background-color: #f7f8fc;
+    color: #333;
+    margin: 0;
+    padding: 0;
+    display: flex;
+    flex-direction: column;
+    min-height: 100%;
+}
+
 main {
     max-width: 800px;
     margin: 0 auto;
     padding: 30px 20px;
+    flex: 1;
 }
 
-.index-title, .delivery-title, .section-title, .index-text, .center {
+.index-title {
     text-align: center;
     color: #333;
 }
 
-.review {
-    margin-bottom: 25px;
-    background-color: #fff;
-    padding: 20px;
-    border-radius: 8px;
-    box-shadow: 0 2px 6px rgba(0, 0, 0, 0.1);
-}
-
-.review h3 {
-    text-align: left;
-    color: #34495e;
-}
-
-.review p {
-    margin: 0;
-    color: #555;
-}
-
-.delivery-section {
-    margin-top: 25px;
-}
-
-.delivery-section h2 {
-    margin-top: 25px;
-}
-
-#main-content {
-    display: flex;
-    flex-direction: column;
-    text-align: center;
-    padding: 20px;
-    width: 100%;
-}
-
-#catalog-container {
-    display: flex;
-    justify-content: center;
-    padding: 20px;
-}
-
-#catalog-main {
-    width: 100%;
-    max-width: 1200px;
-}
-.catalog-category {
-    display: grid;
-    grid-template-columns: repeat(auto-fill, minmax(250px, 1fr));
-    gap: 20px;
-    margin-bottom: 40px;
-}
-
-.catalog-product {
-    background-color: #fff;
-    padding: 20px;
-    border-radius: 8px;
-    box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
-    text-align: center;
-    transition: transform 0.3s ease, box-shadow 0.3s ease;
-}
-
-.catalog-product:hover {
-    transform: translateY(-5px);
-    box-shadow: 0 6px 12px rgba(0, 0, 0, 0.2);
-}
-
-.catalog-product img {
-    width: 200px;
-    max-width: 200px;
-    height: 200px;
-    border-radius: 8px;
-    object-fit: cover;
-}
-
-.catalog-product h3 {
-    font-size: 1.2em;
-    margin-top: 15px;
-    color: #34495e;
-}
-
-.catalog-product p {
-    font-size: 0.95em;
-    color: #555;
-    margin: 10px 0;
-}
-
-.catalog-product button {
-    background-color: #2980b9;
-    color: white;
-    padding: 10px;
-    border: none;
-    border-radius: 4px;
-    font-size: 1em;
-    cursor: pointer;
-    transition: background-color 0.3s ease;
-}
-
-.catalog-product button:hover {
-    background-color: #1a5276;
+.joke-box {
+    display: inline-block;
+    padding: 12px 24px;
+    font-size: 1rem;
+    background-color: #edf1f4;
+    border-radius: 25px;
+    text-decoration: none;
+    font-weight: bold;
+    transition: background-color 0.3s;
 }
 
 
-/*
-Куплений
- */
-.purchased {
-    background-color: #28a745; /* Зелений колір */
-    color: white;
-}
-.catalog-product.purchased {
-    border: 2px solid #28a745; /* Зелене підсвічування */
-}
-.catalog-product.purchased p {
-    font-size: 0.95em;
-    color: #ffffff;
-    margin: 10px 0;
-}
-.catalog-product.purchased h3 {
-    font-size: 1.2em;
-    margin-top: 15px;
-    color: #ffffff;
-}
-.catalog-product.purchased button {
-    background-color: #b92929;
-    color: white;
-    padding: 10px;
-    border: none;
-    border-radius: 4px;
-    font-size: 1em;
-    cursor: pointer;
-    transition: background-color 0.3s ease;
-}
-.catalog-product.purchased button:hover {
-    background-color: #761a1a;
+.joke-button {
+    display: inline-block;
+    padding: 12px 24px;
+    font-size: 1rem;
+    color: #fff;
+    background-color: #2980B9;
+    border-radius: 25px;
+    text-decoration: none;
+    font-weight: bold;
+    transition: background-color 0.3s;
 }
 
-
-/* Responsive design */
-@media (max-width: 768px) {
-    #catalog-container {
-        padding: 10px;
-    }
-
-    .catalog-category {
-        grid-template-columns: 1fr 1fr;
-    }
-
-    .catalog-product {
-        padding: 15px;
-    }
+.joke-button:hover {
+    background-color: #3498DB;
 }
-
-@media (max-width: 480px) {
-    .catalog-category {
-        grid-template-columns: 1fr;
-    }
-
-    .catalog-product {
-        padding: 10px;
-    }
-
-    .catalog-product img {
-        max-width: 150px;
-    }
-}
-
-
-/* Стиль модального вікна */
-.modal {
-    display: none;
-    position: fixed;
-    z-index: 1000;
-    left: 0;
-    top: 0;
-    width: 100%;
-    height: 100%;
-    background-color: rgba(0, 0, 0, 0.5);
-    justify-content: center;
-    align-items: center;
-}
-
-.modal-content {
-    background-color: #fff;
-    padding: 20px;
-    border-radius: 8px;
-    width: 300px;
-    text-align: center;
-    position: relative;
-}
-
-.modal-content .close {
-    position: absolute;
-    top: 10px;
-    right: 10px;
-    font-size: 1.5em;
-    cursor: pointer;
-}
-
-.modal-content input,
-.modal-content textarea {
-    width: 75%;
-    padding: 10px;
-    margin: 10px 0;
-    border: 1px solid #ccc;
-    border-radius: 4px;
-}
-
